--- a/client-server/client-side/index.html
+++ b/client-server/client-side/index.html
@@ -58,7 +58,7 @@
 
 		//this first request check if servise is up
 		var xhttp = new XMLHttpRequest();
-		var url = "http://127.0.0.1:5001/api/v2/test";
+		var url = "http://www.cm-innovationlab.it:5001/api/v2/test";
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
 				const obj = JSON.parse(this.responseText);
@@ -87,7 +87,7 @@
 		//This function made inference on model
 		function imageUpload() {
 			var xhttp2 = new XMLHttpRequest();
-			var url = "http://127.0.0.1:5001/api/v2/img/inference";
+			var url = "http://www.cm-innovationlab.it:5001/api/v2/img/inference";
 			xhttp2.onreadystatechange = function() {
 				if (this.readyState == 4 && this.status == 200) {
 					const obj = JSON.parse(this.responseText);
