--- a/client-server/client-side/aisavequeenbees.html
+++ b/client-server/client-side/aisavequeenbees.html
@@ -20,7 +20,11 @@
 				<legend>Carica ed invia un'immagine al modello di AI:</legend>
 				<form onsubmit="imageUpload();return false">
 					<input type="file" id="userImagePath" name="userImagePath"  accept="image/*"></br></br>
-					<input type="submit"/>
+					<input type="submit"/></br></br>
+					<p><u>Le immagini inviate saranno utilizzate solo per identificare api, calabroni e vespe.</u></br>
+						Si chiede agli utenti di non sovraccaricare il server con richieste inutili.</br>
+						Si ricorda che la previsione del modello è solo indicativa ed è preferibile</br>
+						inquadrare un insetto alla volta per ottenere una risposta più accurata.</p>
 				</form>
 			</fieldset>
 
