--- a/client-server/client-side/aisavequeenbees.html
+++ b/client-server/client-side/aisavequeenbees.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>AI Save Queen Bees</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body style="font: 15px 'Arial';">
